public class Main {
    public static void main(String[] args) {
        new StartMenu("TMS").startSession();
    }
}
